add some lorem text

--- a/app/app/views/directory/index.html.erb
+++ b/app/app/views/directory/index.html.erb
@@ -1,6 +1,7 @@
 <div class="row">
 	<div class="medium-12 columns">
 		<h1>Podcast Verzeichnis</h1>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis, quibusdam, enim officiis animi modi eaque cum accusamus necessitatibus obcaecati facilis illo adipisci? Aliquid, placeat, commodi ratione rerum voluptates facere id!</p>
 
 		<div id="searchbar" class="row">
 			<div class="large-6 medium-9 small-centered columns">
