--- a/app/app/views/schedule/index.html.erb
+++ b/app/app/views/schedule/index.html.erb
@@ -1,6 +1,7 @@
 <div class="row">
 	<div class="medium-12 columns">
 		<h1>Channels</h1>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, accusamus, omnis, dolorum voluptatibus libero ipsum possimus labore error corporis iste fugit saepe cupiditate ratione laboriosam ad vel voluptate nesciunt illo.</p>
 
 		<ul class="small-block-grid-1 medium-block-grid-3">
 			<% @channel_playlists.each do |channel_playlist| %>
