--- a/app/app/views/channel_playlists/index.html.erb
+++ b/app/app/views/channel_playlists/index.html.erb
@@ -33,8 +33,8 @@
 					</tr>
 
 					<tr>
-						<td><strong>Stream URL:</strong></td>
-						<td><%= channel_playlist.stream_url %></td>
+						<td><strong>Icecast Mountpoint:</strong></td>
+						<td><%= channel_playlist.icecast_mountpoint %></td>
 					</tr>
 
 					<tr>
