--- a/app/app/views/schedule/_episodes.html.erb
+++ b/app/app/views/schedule/_episodes.html.erb
@@ -6,11 +6,11 @@
 			<div class="row playlist-entry">
 				<div class="medium-3 columns">
 					<%= image_tag entry.episode.coverart.thumb_400%>
-					<div><%= entry.start_time %></div>
-					<div><%= entry.end_time %></div>
+					<div><i class="fa fa-play"></i> <%= entry.start_time.strftime("%H:%M") %></div>
+					<div><i class="fa fa-stop"></i> <%= entry.end_time.strftime("%H:%M") %></div>
 					
 					<% if entry.is_live? %>
-						<div>Time left: <%= entry.time_left_human %></div>
+						<div><i class="fa fa-clock-o"></i> <%= entry.time_left_human %></div>
 						<div class="progress">
 							<span class="meter" style="width: <%= entry.percent_left %>%"></span>
 						</div>
