--- a/app/app/views/directory/show_episode.html.erb
+++ b/app/app/views/directory/show_episode.html.erb
@@ -1,6 +1,7 @@
 <div class="row">
 	<div class="medium-3 columns">
 		<%= image_tag @episode.coverart.thumb_400 %>
+		<%= link_to 'Zum Podcast', directory_show_podcast_path(@episode.podcast), class: 'button', style: 'width: 100%' %>
 	</div>
 	<div class="medium-9 columns">
 		<h1><%= @episode.title %></h1>
