show episode publish date in schedule

--- a/app/app/views/schedule/_episodes.html.erb
+++ b/app/app/views/schedule/_episodes.html.erb
@@ -19,6 +19,7 @@
 
 					<h3><%= entry.episode.title %></h3>
 					<p><%= entry.episode.subtitle %></p>
+					<p>Published: <%= entry.episode.pub_date %></p>
 
 					<!-- SOCIAL LINKS - MORE METAINFO FOR PODCAST -->
 					<ul class="inline-list">
