--- a/app/app/views/directory/show_episode.html.erb
+++ b/app/app/views/directory/show_episode.html.erb
@@ -11,7 +11,7 @@
 
 <div class="row">
 	<div class="medium-12 columns">
-
+		<!-- TODO sure raw? -->
 		<%= raw @episode.content %>
 	</div>
 </div>
