--- a/config/deploy/templates/unicorn.rb.erb
+++ b/config/deploy/templates/unicorn.rb.erb
@@ -1,8 +1,8 @@
 root = "<%= current_path %>"
 working_directory root
-pid "#{root}/tmp/pids/unicorn.pid"
-stderr_path "#{root}/log/unicorn.log"
-stdout_path "#{root}/log/unicorn.log"
+pid "<%= unicorn_pid %>"
+stderr_path "<%= unicorn_log %>"
+stdout_path "<%= unicorn_log %>"
 
 listen "/tmp/unicorn.<%= fetch(:full_app_name) %>.sock"
 worker_processes <%= fetch(:unicorn_worker_count) %>
