--- a/config/deploy/templates/unicorn_init.sh.erb
+++ b/config/deploy/templates/unicorn_init.sh.erb
@@ -15,10 +15,9 @@ set -e
 # Feel free to change any of the following variables for your app:
 TIMEOUT=${TIMEOUT-60}
 APP_ROOT=<%= current_path %>
-PID_DIR=$APP_ROOT/tmp/pids
-PID=$PID_DIR/unicorn.pid
-CMD="cd $APP_ROOT;  bundle exec unicorn -D -c <%= "#{shared_path}/config/unicorn.rb" %> -E <%= fetch(:rails_env) %>"
-AS_USER=<%= fetch(:deploy_user) %>
+PID=<%= unicorn_pid %>
+CMD="cd $APP_ROOT;  bundle exec unicorn -D -c <%= unicorn_config %> -E <%= fetch(:rails_env) %>"
+AS_USER=<%= unicorn_user %>
 set -u
 
 OLD_PIN="$PID.oldbin"
