--- a/config/deploy/templates/unicorn.rb.erb
+++ b/config/deploy/templates/unicorn.rb.erb
@@ -1,19 +1,19 @@
-root = "<%= current_path %>"
+root = "<%= fetch(:current_path) %>"
 working_directory root
-pid "<%= unicorn_pid %>"
-stderr_path "<%= unicorn_log %>"
-stdout_path "<%= unicorn_log %>"
+pid "<%= fetch(:unicorn_pid, "#{current_path}/tmp/pids/unicorn.pid") %>"
+stderr_path "<%= fetch(:unicorn_log, "#{shared_path}/log/unicorn.log") %>"
+stdout_path "<%= fetch(:unicorn_log, "#{shared_path}/log/unicorn.log")  %>"
 
 listen "/tmp/unicorn.<%= fetch(:full_app_name) %>.sock"
-worker_processes <%= fetch(:unicorn_worker_count) %>
+worker_processes <%= fetch(:unicorn_worker_count, 2) %>
 timeout 40
 preload_app true
 
-# Force unicorn to look at the Gemfile in the current_path
+# Force unicorn to look at the Gemfile in the fetch(:current_path)
 # otherwise once we've first started a master process, it
 # will always point to the first one it started.
 before_exec do |server|
-  ENV['BUNDLE_GEMFILE'] = "<%= current_path %>/Gemfile"
+  ENV['BUNDLE_GEMFILE'] = "<%= fetch(:current_path) %>/Gemfile"
 end
 
 before_fork do |server, worker|
