--- a/config/deploy/templates/unicorn_init.sh.erb
+++ b/config/deploy/templates/unicorn_init.sh.erb
@@ -14,10 +14,10 @@ set -e
 
 # Feel free to change any of the following variables for your app:
 TIMEOUT=${TIMEOUT-60}
-APP_ROOT=<%= current_path %>
-PID=<%= unicorn_pid %>
-CMD="cd $APP_ROOT;  bundle exec unicorn -D -c <%= unicorn_config %> -E <%= fetch(:rails_env) %>"
-AS_USER=<%= unicorn_user %>
+APP_ROOT=<%= fetch(:current_path) %>
+PID=<%= fetch(:unicorn_pid, "#{current_path}/tmp/pids/unicorn.pid") %>
+CMD="cd $APP_ROOT;  bundle exec unicorn -D -c <%= fetch(:unicorn_config, "#{shared_path}/config/unicorn.rb") %> -E <%= fetch(:rails_env) %>"
+AS_USER=<%= fetch(:unicorn_user, :user) %>
 set -u
 
 OLD_PIN="$PID.oldbin"
