--- a/config/deploy/templates/mpd.conf.erb
+++ b/config/deploy/templates/mpd.conf.erb
@@ -8,7 +8,6 @@
 playlist_directory	"/var/lib/mpd/playlists_<%= fetch(:full_app_name) %>"
 db_file			"/var/lib/mpd/tag_cache_<%= fetch(:full_app_name) %>"
 log_file		"/var/log/mpd/mpd_<%= fetch(:full_app_name) %>.log"
-error_file		"/var/log/mpd/errors_<%= fetch(:full_app_name) %>.log"
 ################################################################
 
 
@@ -45,7 +44,7 @@ user                            "<%= fetch(:user) %>"
 # If the address is a path, then a UNIX domain socket will be
 # created instead of listening on a TCP port.
 #
-bind_to_address                 "/var/run/mpd/sock_<% fetch(:full_app_name) %>"
+bind_to_address                 "/var/run/mpd/sock_<%= fetch(:full_app_name) %>"
 #
 # Controls the amount of information that is logged.  Can be
 # "default", "secure", or "verbose".
