working deploy setup

--- a/config/deploy/templates/mpd.conf.erb
+++ b/config/deploy/templates/mpd.conf.erb
@@ -34,7 +34,7 @@ state_file		"/var/lib/mpd/state_<%= fetch(:full_app_name) %>"
 # started by.  If left unspecified, MPD will not drop root
 # privileges at all (not recommended).
 #
-user                            "<%= fetch(:user) %>"
+user                            "mpd"
 #
 # The address and port to listen on.
 #
