--- a/config/deploy/templates/icecast.xml.erb
+++ b/config/deploy/templates/icecast.xml.erb
@@ -1,4 +1,10 @@
 <icecast>
+    <!-- location and admin are two arbitrary strings that are e.g. visible
+         on the server info page of the icecast web interface
+         (server_version.xsl). -->
+    <location>Earth</location>
+    <admin>icemaster@localhost</admin>
+
     <limits>
         <clients><%= fetch(:icecast_client_limit, 100) %></clients>
         <sources><%= fetch(:icecast_sources_limit, 2) %></sources>
@@ -132,7 +138,7 @@
         <logdir>/var/log/icecast2</logdir>
         <webroot>/usr/share/icecast2/web</webroot>
         <adminroot>/usr/share/icecast2/admin</adminroot>
-        <!-- <pidfile>/usr/share/icecast2/icecast.pid</pidfile> -->
+        <pidfile><%= fetch(:icecast_pidfile) %></pidfile>
 
         <!-- Aliases: treat requests for 'source' path as being for 'dest' path
              May be made specific to a port or bound address using the "port"
