cleanup the directory. no episode listing any more. direct link to the podcast in schedule instead.

--- a/app/views/schedule/_episodes.html.erb
+++ b/app/views/schedule/_episodes.html.erb
@@ -26,9 +26,7 @@
 						<!-- WEBSITE -->
 						<li><a href="<%= entry.episode.link %>" target="_blank"><i class="fa fa-globe"></i> Webseite</a></li>
 
-						<li><%= link_to 'Im Verzeichnis', directory_show_episode_path(entry.episode) %></li>
-
-						<li><%= link_to 'Mehr von diesem Podcast', directory_show_podcast_path(entry.episode.podcast) %></li>
+						<li><%= link_to 'Über diesen Podcast', directory_show_podcast_path(entry.episode.podcast) %></li>
 
 						<!-- FEED -->
 						<li>
