button tag in german

--- a/app/views/directory/index.html.erb
+++ b/app/views/directory/index.html.erb
@@ -11,7 +11,7 @@
 							<%= f.text_field :title_or_subtitle_cont, :placeholder => "Verzeichnis durchsuchen", :id => "search-input-field" %>
 						</div>
 						<div class="medium-2 columns hide-for-small">
-							<%= f.submit "Search", :class => "prefix button" %>
+							<%= f.submit "Suchen", :class => "prefix button" %>
 						</div>
 					</div>
 				<% end %>
